@@ -349,8 +349,6 @@ bool ZeroLeptonCRWT::processEvent(xAOD::TEvent& event)
   if(m_IsTruth){
     m_physobjsFillerTruth->FillJetProxies(good_jets,b_jets);
   }
-  std::vector<float> btag_weight(7,1.); // not implemented in SUSYTools
-  std::vector<float> ctag_weight(7,1.); // not implemented in SUSYTools
 
   double leptonPtCut = 25000.;
   if ( m_LowPtLepton ) leptonPtCut = 10000.;
@@ -700,12 +698,13 @@ bool ZeroLeptonCRWT::processEvent(xAOD::TEvent& event)
     nonISR_jets.erase(nonISR_jets.begin()+isr_jet_indices[0],nonISR_jets.end());
   }
 
-
+  /* not used now
   double mT2=-9;
-  //if (good_jets.size()>=2) mT2 = m_proxyUtils.MT2(good_jets,missingETPrime);
+  if (good_jets.size()>=2) mT2 = m_proxyUtils.MT2(good_jets,missingETPrime);
   double mT2_noISR=-9;
-  //if (nonISR_jets.size()>=2) mT2_noISR = m_proxyUtils.MT2(nonISR_jets,missingETPrime);
-  //out() << " mT2 " << mT2 << " " << mT2_noISR << std::endl;
+  if (nonISR_jets.size()>=2) mT2_noISR = m_proxyUtils.MT2(nonISR_jets,missingETPrime);
+  out() << " mT2 " << mT2 << " " << mT2_noISR << std::endl;
+  */
 
   std::map<TString,float> RJigsawVariables;
   if (  m_fillTRJigsawVars ) {
@@ -824,7 +823,7 @@ bool ZeroLeptonCRWT::processEvent(xAOD::TEvent& event)
       isNCBEvent = *NCBEventFlag;
     }
 
-    m_proxyUtils.FillNTVars(m_ntv, runnum, EventNumber, LumiBlockNumber, veto, weight, normWeight, *pileupWeights, PRWHash, genWeight,ttbarWeightHT,ttbarWeightPt2,ttbarAvgPt,WZweight, btag_weight, ctag_weight, b_jets.size(), c_jets.size(), MissingEtPrime, phi_met, missingET_TST->Mod(), missingET_TST->Phi(), Meff, meffincl, minDphi, RemainingminDPhi, good_jets, good_fat_jets, vD2_fat, visWmedium_fat, trueTopo, cleaning, time[0],jetSmearSystW,0, 0.,0.,dPhiBadTile,isNCBEvent,m_IsTruth,baseline_taus,signal_taus);
+    m_proxyUtils.FillNTVars(m_ntv, runnum, EventNumber, LumiBlockNumber, veto, weight, normWeight, *pileupWeights, PRWHash, genWeight,ttbarWeightHT,ttbarWeightPt2,ttbarAvgPt,WZweight, b_jets.size(), c_jets.size(), MissingEtPrime, phi_met, missingET_TST->Mod(), missingET_TST->Phi(), Meff, meffincl, minDphi, RemainingminDPhi, good_jets, good_fat_jets, vD2_fat, visWmedium_fat, trueTopo, cleaning, time[0],jetSmearSystW,0, 0.,dPhiBadTile,isNCBEvent,m_IsTruth,baseline_taus,signal_taus);
 
     if ( systag == ""  && !m_IsTruth) {
       std::vector<float>* p_systweights = 0;
@@ -842,7 +841,7 @@ bool ZeroLeptonCRWT::processEvent(xAOD::TEvent& event)
 
     FillCRWTVars(m_crwtntv,leptonTLV,*missingET,leptonCharge,ptvarcone20,ptvarcone30,topoetcone20,lep1Signal,fake_weight);
 
-    m_proxyUtils.FillNTExtraVars(m_extrantv, MET_Track, MET_Track_phi, mT2, mT2_noISR, Ap);
+    m_proxyUtils.FillNTExtraVars(m_extrantv, MET_Track, MET_Track_phi, Ap);
 
     if (  m_fillTRJigsawVars ) m_proxyUtils.FillNTRJigsawVars(m_rjigsawntv, RJigsawVariables );
 
