@@ -286,8 +286,6 @@ bool ZeroLeptonCRZ::processEvent(xAOD::TEvent& event)
   if(m_IsTruth){
     m_physobjsFillerTruth->FillJetProxies(good_jets,b_jets);
   }
-  std::vector<float> btag_weight(7,1.); // not implemented in SUSYTools
-  std::vector<float> ctag_weight(7,1.); // not implemented in SUSYTools
 
   // isolated_xxx have overlap removed
   std::vector<ElectronProxy> baseline_electrons, isolated_baseline_electrons, isolated_signal_electrons;
@@ -553,9 +551,11 @@ bool ZeroLeptonCRZ::processEvent(xAOD::TEvent& event)
     WZweight = eventInfo->auxdecor<float>("WZweight");
   }
 
+  /*
   double mT2=-9;
   double mT2_noISR=-9;
-  //if (good_jets.size()>=2) mT2 = m_proxyUtils.MT2(good_jets,missingETPrime);
+  if (good_jets.size()>=2) mT2 = m_proxyUtils.MT2(good_jets,missingETPrime);
+  */
 
   std::map<TString,float> RJigsawVariables;
   if ( m_fillTRJigsawVars) {
@@ -670,7 +670,7 @@ bool ZeroLeptonCRZ::processEvent(xAOD::TEvent& event)
       isNCBEvent = *NCBEventFlag;
     }
 
-    m_proxyUtils.FillNTVars(m_ntv, runnum, EventNumber, LumiBlockNumber, veto, weight, normWeight, *pileupWeights, PRWHash, genWeight,ttbarWeightHT,ttbarWeightPt2,ttbarAvgPt,WZweight, btag_weight, ctag_weight, b_jets.size(), c_jets.size(), MissingEtPrime, phi_met, missingET_TST->Mod(), missingET_TST->Phi(),Meff, meffincl, minDphi, RemainingminDPhi, good_jets, good_fat_jets, vD2_fat, visWmedium_fat, trueTopo, cleaning, time[0],jetSmearSystW,0,0.,0.,dPhiBadTile,isNCBEvent,m_IsTruth,baseline_taus,signal_taus);
+    m_proxyUtils.FillNTVars(m_ntv, runnum, EventNumber, LumiBlockNumber, veto, weight, normWeight, *pileupWeights, PRWHash, genWeight,ttbarWeightHT,ttbarWeightPt2,ttbarAvgPt,WZweight, b_jets.size(), c_jets.size(), MissingEtPrime, phi_met, missingET_TST->Mod(), missingET_TST->Phi(),Meff, meffincl, minDphi, RemainingminDPhi, good_jets, good_fat_jets, vD2_fat, visWmedium_fat, trueTopo, cleaning, time[0],jetSmearSystW,0,0.,dPhiBadTile,isNCBEvent,m_IsTruth,baseline_taus,signal_taus);
 
     if ( systag == "" && !m_IsTruth ) {
       std::vector<float>* p_systweights = 0;
@@ -682,7 +682,7 @@ bool ZeroLeptonCRZ::processEvent(xAOD::TEvent& event)
       m_ntv.btagSystWeights = *p_btagSystweights;
     }
 
-    m_proxyUtils.FillNTExtraVars(m_extrantv, MET_Track, MET_Track_phi, mT2, mT2_noISR, Ap);
+    m_proxyUtils.FillNTExtraVars(m_extrantv, MET_Track, MET_Track_phi, Ap);
 
     if ( m_fillTRJigsawVars) m_proxyUtils.FillNTRJigsawVars(m_rjigsawntv, RJigsawVariables );
 
